...
            android:background="#E0E0E0"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <!-- Manage Products -->
        <LinearLayout
            android:id="@+id/btnProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
...
